--- a/vue_prob/06_vue_deep/todolist-app/src/assets/main.css
+++ b/vue_prob/06_vue_deep/todolist-app/src/assets/main.css
@@ -1,18 +1,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans serif;
+  font-family: sans-serif;
 }
 .title {
   text-align: center;
   font-weight: bold;
   font-size: 20pt;
 }
-
 .todo-done {
-  text-decoration: line through;
+  text-decoration: line-through;
 }
-
 .container {
   padding: 10px 10px 10px 10px;
 }
@@ -20,7 +18,6 @@ body {
   border: 0;
   box-shadow: none;
 }
-
 .pointer {
   cursor: pointer;
 }
